--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,8 +1,9 @@
-@use '../../../styles/mixins' as *;
+@use '../../styles/_mixins.scss' as *;
 .header {
     
     height: 10rem;
     background-color: #32302F;
+    @include p-font;
 
     &__wrapper {
         display: flex;
