--- a/client/src/pages/details/details.scss
+++ b/client/src/pages/details/details.scss
@@ -1,15 +1,22 @@
-@use '../../../styles/_mixins.scss' as *;
+@use '../../styles/_mixins.scss' as *;
 
 .details {
     &__title {
         text-align: center;
-        font-family: 'LibreCaslon';
-        font-size: 2.25rem;
-        color: #32302F;
+        @include h1;
     }
 
     &__display {
-        text-align: center;
+    list-style-type: none;
+    }
+
+    &__amount {
+    padding-bottom: 1rem;
+    @include p-font;
+    }
+
+    &__expense {
+    @include p-font;
     }
 
 }
