--- a/client/src/pages/main/main.scss
+++ b/client/src/pages/main/main.scss
@@ -6,3 +6,16 @@
     font-family: 'LibreCaslon';
     font-size: 2.25rem;
 }
+
+// .div {
+//     border:1px solid black; 
+//     height: 5rem;
+//     width:50px;
+//     position:relative;
+// }
+
+// .green_div {
+//     background:green;
+//     width:100%;
+//     bottom:0;
+// }
