completed the front end post functionality

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,4 +1,4 @@
-@use '../../../styles/mixins' as *;
+@use '../../styles/mixins' as *;
 .header {
     
     height: 10rem;
@@ -46,4 +46,14 @@
         }
 
     }
+}
+a{
+    text-decoration: none;
+   
+}
+a.active {
+    
+    text-decoration: none;
+    
+    
 }
